Fix z-index bug with illustration tools

--- a/scenes/seasonofgiving/sass/_tools.scss
+++ b/scenes/seasonofgiving/sass/_tools.scss
@@ -203,7 +203,7 @@
   .Tool--selected {
     background-size: contain !important;
     position: fixed;
-    z-index: 3;
+    z-index: 6;
     transform-origin: 4% 100% 0;
   }
 
